--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
       <model-viewer 
       camera-controls camera-orbit="120deg 50deg 10m" 
-      src="pikatyuu.glb" /* 3Dモデル ファイル指定 */
+      src="pikaani.glb" /* 3Dモデル ファイル指定 */
       poster="assets/loding.gif"
       alt="non pokemon"
       shadow-intensity="1"
